2203/lab6/out
BD Software STL Message Decryptor v3.10 for gcc 2/3/4
main.cc: In function ‘void process(
        Window &, Window &, Window &, Window &, ::string, 
        ::string, int &, int &, int &, int &)’:
main.cc:158:4: error: ‘msgWin’ was not declared in this scope
msgWin.hide();
^~~~~~
main.cc:158:4: suggested alternative: ‘mvwin’
msgWin.hide();
^~~~~~
mvwin
main.cc:159:4: error: ‘msgLose’ was not declared in this scope
msgLose.hide();
^~~~~~~
main.cc:160:4: error: ‘msgTie’ was not declared in this scope
msgTie.hide();
^~~~~~
